<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateTicketButtonLabel"
        android:id="@+id/buttonCreateTicket"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EditTicketButtonLabel"
        android:id="@+id/buttonEditTicket"
        android:layout_below="@+id/buttonCreateTicket"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DeleteTicketButtonLabel"
        android:id="@+id/buttonDeleteTicket"
        android:layout_below="@+id/buttonEditTicket"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ViewTicketButtonLabel"
        android:id="@+id/buttonViewTicket"
        android:layout_below="@+id/buttonDeleteTicket"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Finish_ButtonLabel"
        android:id="@+id/buttonFinish"
        android:layout_below="@+id/buttonViewTicket"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/CustCare_TextViewLabel"
        android:id="@+id/textViewCustomerCare"
        android:layout_below="@+id/buttonFinish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:textColor="#046697" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageViewCallIcon"
        android:src="@drawable/callicon"
        android:scaleType="fitXY"
        android:layout_below="@+id/buttonFinish"
        android:layout_marginTop="40dp"
        android:layout_toStartOf="@+id/textViewCustomerCare" />

</RelativeLayout>
