<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.ticketreservation.PrintTicketActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Itinerary_TextViewLabel"
        android:id="@+id/textViewItinerary"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Name_TextViewLabel"
        android:id="@+id/textViewName"
        android:layout_below="@+id/textViewItinerary"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Source_TextViewLabel"
        android:id="@+id/textViewSource"
        android:layout_below="@+id/textViewName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Destination_TextViewLabel"
        android:id="@+id/textViewDestination"
        android:layout_below="@+id/textViewSource"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Departure_TextViewLabel"
        android:id="@+id/textViewDeparture"
        android:layout_below="@+id/textViewDestination"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Return_TextViewLabel"
        android:id="@+id/textViewReturn"
        android:layout_below="@+id/textViewDeparture"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Finish_ButtonLabel"
        android:id="@+id/buttonFinish"
        android:layout_below="@+id/textViewReturn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewNameDisplay"
        android:layout_alignTop="@+id/textViewName"
        android:layout_toEndOf="@+id/textViewSource" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewSourceDisplay"
        android:layout_alignTop="@+id/textViewSource"
        android:layout_toEndOf="@+id/textViewSource" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewDestinationDisplay"
        android:layout_alignTop="@+id/textViewDestination"
        android:layout_toEndOf="@+id/textViewDestination" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewDepartureDisplay"
        android:layout_alignTop="@+id/textViewDeparture"
        android:layout_toEndOf="@+id/textViewDeparture" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewReturnDisplay"
        android:layout_alignTop="@+id/textViewReturn"
        android:layout_toEndOf="@+id/textViewName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewDepartTimeDisplay"
        android:layout_alignTop="@+id/textViewDepartureDisplay"
        android:layout_toEndOf="@+id/textViewDepartureDisplay" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textViewReturnTimeDisplay"
        android:layout_alignTop="@+id/textViewReturnDisplay"
        android:layout_toEndOf="@+id/textViewReturnDisplay" />

</RelativeLayout>
