<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.com.ticketreservation.ViewTicketActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:hint="Name"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:editable="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextSource"
        android:layout_below="@+id/editTextName"
        android:layout_centerHorizontal="true"
        android:hint="Source" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDestination"
        android:layout_below="@+id/editTextSource"
        android:layout_centerHorizontal="true"
        android:hint="Destination" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Trip_TextViewLabel"
        android:id="@+id/textViewTrip"
        android:layout_below="@+id/editTextDestination"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTrip"
        android:layout_alignParentStart="true"
        android:id="@+id/radioGroup"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OneWay_RadioButtonLabel"
            android:id="@+id/radioButtonOneWay"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoundTrip_RadioButtonLabel"
            android:id="@+id/radioButtonRoundTrip"
            android:checked="false" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDepartureDate"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:hint="Departure Date"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/editTextDepartureTime"
        android:layout_alignBottom="@+id/editTextDepartureDate"
        android:layout_toEndOf="@+id/editTextDepartureDate"
        android:hint="Time" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextReturnDate"
        android:layout_below="@+id/editTextDepartureDate"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editTextDepartureTime"
        android:hint="Returning Date"
        android:visibility="invisible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextReturnTime"
        android:layout_alignBottom="@+id/editTextReturnDate"
        android:layout_alignEnd="@+id/editTextDepartureTime"
        android:layout_toEndOf="@+id/editTextReturnDate"
        android:hint="Time"
        android:visibility="invisible" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_marginLeft="25dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageViewFirst"
            android:src="@drawable/first"
            android:clickable="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageViewPrevious"
            android:src="@drawable/prev"
            android:clickable="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Finish_ButtonLabel"
            android:id="@+id/buttonFinish"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageViewNext"
            android:src="@drawable/next"
            android:clickable="true" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/imageViewLast"
            android:src="@drawable/last"
            android:clickable="true" />
    </TableRow>

</RelativeLayout>
